--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "r3f-perf": "6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "three": "^0.145.0"
+    "three": "^0.145.0",
+    "zustand": "4.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
