--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-three/drei": "9.32",
     "@react-three/fiber": "8.8",
+    "@react-three/postprocessing": "2.6",
     "@react-three/rapier": "^0.9.0",
     "leva": "^0.9.34",
     "r3f-perf": "6.5",
